Bug 1493976 - Define OutOfFlowDisplayData::ComputeVisibleRectForFrame() out of line. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D9442